# pysol-cards-in-C

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.asciidoc  call.c  docker_ci.py  embed_python.h  multiply.py  pysol_cards_c.py  run.bash
.github/workflows/: main.yml
hello-world-docker-action/: Dockerfile  action.yml
libpysol_cards/: python_embed.h
my-gh-actions-ci/: Dockerfile
